--- a/cart.html
+++ b/cart.html
@@ -53,7 +53,247 @@
           <img src="/images/2.jpg" alt="Product Image">
         </td>
         <td class="infBox">
-          <p class="infTitle">Leng Vishnje Frutti 1L asdasd qweq weq qweqweqwe qasdasdsd qwe qweqw easdasd qeqweq weq weqweqw qweqweqw sdsdfsdf wqerwerqeqwe </p>
+          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div class="infPrice">
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div style="display: flex;align-items: center;">
+              <button class="quantity-btn lowCon">&#8722;</button>
+              <input type="number" class="quantity-input" value="1">
+              <button class="quantity-btn highCon">&#x2b;</button>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div class="infPrice">
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div style="display: flex;align-items: center;">
+                    <button class="quantity-btn lowCon">&#8722;</button>
+                    <input type="number" class="quantity-input" value="1">
+                    <button class="quantity-btn highCon">&#x2b;</button>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div class="infPrice">
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div style="display: flex;align-items: center;">
+              <button class="quantity-btn lowCon">&#8722;</button>
+              <input type="number" class="quantity-input" value="1">
+              <button class="quantity-btn highCon">&#x2b;</button>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div class="infPrice">
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div style="display: flex;align-items: center;">
+                    <button class="quantity-btn lowCon">&#8722;</button>
+                    <input type="number" class="quantity-input" value="1">
+                    <button class="quantity-btn highCon">&#x2b;</button>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div class="infPrice">
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div style="display: flex;align-items: center;">
+              <button class="quantity-btn lowCon">&#8722;</button>
+              <input type="number" class="quantity-input" value="1">
+              <button class="quantity-btn highCon">&#x2b;</button>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div class="infPrice">
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div style="display: flex;align-items: center;">
+                    <button class="quantity-btn lowCon">&#8722;</button>
+                    <input type="number" class="quantity-input" value="1">
+                    <button class="quantity-btn highCon">&#x2b;</button>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div class="infPrice">
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div style="display: flex;align-items: center;">
+              <button class="quantity-btn lowCon">&#8722;</button>
+              <input type="number" class="quantity-input" value="1">
+              <button class="quantity-btn highCon">&#x2b;</button>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div class="infPrice">
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div style="display: flex;align-items: center;">
+                    <button class="quantity-btn lowCon">&#8722;</button>
+                    <input type="number" class="quantity-input" value="1">
+                    <button class="quantity-btn highCon">&#x2b;</button>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div class="infPrice">
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div style="display: flex;align-items: center;">
+              <button class="quantity-btn lowCon">&#8722;</button>
+              <input type="number" class="quantity-input" value="1">
+              <button class="quantity-btn highCon">&#x2b;</button>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div class="infPrice">
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div style="display: flex;align-items: center;">
+                    <button class="quantity-btn lowCon">&#8722;</button>
+                    <input type="number" class="quantity-input" value="1">
+                    <button class="quantity-btn highCon">&#x2b;</button>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
           <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
             <div class="infPrice">
               <span>100</span>
