--- a/cart.html
+++ b/cart.html
@@ -34,14 +34,18 @@
 
   <header>
     <div class="flex-alg-center cartHeader">
-      <a href="/index.html">
-        <button>
-          <span class="material-symbols-outlined btn-pad footer-icon">arrow_back</span>
-        </button>
-      </a>
-      <span class="bckCartbtn btn-pad">Favorite List</span>
+      <span class="btn-pad">Favorite List</span>
     </div>
   </header>
+
+  <div style="margin: 15px;">
+    <a href="/index.html">
+      <button class="bckCartbtn btn-pad ">
+        <span class="material-symbols-outlined">arrow_back</span>
+        <span>Continue Shopping</span>
+      </button>
+    </a>
+  </div>
 
   <table class="cartSection">
     <tbody>
@@ -50,13 +54,13 @@
       <tr>
         <!-- Product Image Box -->
         <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
+          <img src="/images/6.png" alt="Product Image">
         </td>
         <td class="infBox">
-          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+          <p class="infTitle">Senf Remi 400gr</p>
           <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
             <div class="infPrice">
-              <span>100</span>
+              <span>3.61</span>
               <span>€</span>
             </div>
             <!-- Quantity Incress and Decress Container-->
@@ -74,13 +78,13 @@
             <tr>
               <!-- Product Image Box -->
               <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
+                <img src="/images/5.png" alt="Product Image">
               </td>
               <td class="infBox">
-                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                <p class="infTitle">Akadia Djath 700gram</p>
                 <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
                   <div class="infPrice">
-                    <span>100</span>
+                    <span>1.85</span>
                     <span>€</span>
                   </div>
                   <!-- Quantity Incress and Decress Container-->
@@ -101,7 +105,55 @@
           <img src="/images/2.jpg" alt="Product Image">
         </td>
         <td class="infBox">
-          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+          <p class="infTitle">Fruta te fresketa 1kg</p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div class="infPrice">
+              <span>6.13</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div style="display: flex;align-items: center;">
+              <button class="quantity-btn lowCon">&#8722;</button>
+              <input type="number" class="quantity-input" value="1">
+              <button class="quantity-btn highCon">&#x2b;</button>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/4.png" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p class="infTitle">Vrishlle Perutina 400gram</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div class="infPrice">
+                    <span>2.50</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div style="display: flex;align-items: center;">
+                    <button class="quantity-btn lowCon">&#8722;</button>
+                    <input type="number" class="quantity-input" value="1">
+                    <button class="quantity-btn highCon">&#x2b;</button>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/3.png" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p class="infTitle">Makarona Devoli 150gr</p>
           <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
             <div class="infPrice">
               <span>100</span>
@@ -122,7 +174,7 @@
             <tr>
               <!-- Product Image Box -->
               <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
+                <img src="/images/2.png" alt="Product Image">
               </td>
               <td class="infBox">
                 <p class="infTitle">Leng Vishnje Frutti 1L  </p>
@@ -141,39 +193,15 @@
               </td>
             </tr>
             <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div class="infPrice">
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div style="display: flex;align-items: center;">
-              <button class="quantity-btn lowCon">&#8722;</button>
-              <input type="number" class="quantity-input" value="1">
-              <button class="quantity-btn highCon">&#x2b;</button>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
 
             <!-- Product Box  -->
             <tr>
               <!-- Product Image Box -->
               <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
+                <img src="/images/1.png" alt="Product Image">
               </td>
               <td class="infBox">
-                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                <p class="infTitle">Green Yogurt 200gr</p>
                 <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
                   <div class="infPrice">
                     <span>100</span>
@@ -189,127 +217,6 @@
               </td>
             </tr>
             <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div class="infPrice">
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div style="display: flex;align-items: center;">
-              <button class="quantity-btn lowCon">&#8722;</button>
-              <input type="number" class="quantity-input" value="1">
-              <button class="quantity-btn highCon">&#x2b;</button>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div class="infPrice">
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div style="display: flex;align-items: center;">
-                    <button class="quantity-btn lowCon">&#8722;</button>
-                    <input type="number" class="quantity-input" value="1">
-                    <button class="quantity-btn highCon">&#x2b;</button>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div class="infPrice">
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div style="display: flex;align-items: center;">
-              <button class="quantity-btn lowCon">&#8722;</button>
-              <input type="number" class="quantity-input" value="1">
-              <button class="quantity-btn highCon">&#x2b;</button>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div class="infPrice">
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div style="display: flex;align-items: center;">
-                    <button class="quantity-btn lowCon">&#8722;</button>
-                    <input type="number" class="quantity-input" value="1">
-                    <button class="quantity-btn highCon">&#x2b;</button>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div class="infPrice">
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div style="display: flex;align-items: center;">
-              <button class="quantity-btn lowCon">&#8722;</button>
-              <input type="number" class="quantity-input" value="1">
-              <button class="quantity-btn highCon">&#x2b;</button>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
 
     </tbody>
   </table>
