--- a/cart.html
+++ b/cart.html
@@ -30,218 +30,204 @@
   * License: denis.cilesi.com
   ======================================================== -->
 </head>
-<body>
+<body class="test2">
 
-  <header>
-    <div class="flex-alg-center cartHeader">
-      <span class="btn-pad">Favorite List</span>
-    </div>
+  <header class="cartHeader">
+    <img src="public/images/Logo.svg" alt="Main Logo Image">
   </header>
 
-  <div style="margin: 15px;">
-    <a href="/index.html">
-      <button class="bckCartbtn btn-pad ">
-        <span class="material-symbols-outlined">arrow_back</span>
-        <span>Continue Shopping</span>
-      </button>
-    </a>
-  </div>
+  <section class="cartSection">
 
-  <table class="cartSection">
-    <tbody>
-      
-      <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/6.png" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p class="infTitle">Senf Remi 400gr</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div class="infPrice">
-              <span>3.61</span>
-              <span>€</span>
+    <table>
+      <tbody>
+        
+        <!-- Product Box  -->
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <img src="/images/6.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
             </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div style="display: flex;align-items: center;">
-              <button class="quantity-btn lowCon">&#8722;</button>
-              <input type="number" class="quantity-input" value="1">
-              <button class="quantity-btn highCon">&#x2b;</button>
+          </td>
+        </tr>
+        <!-- End of Product Box  -->
+  
+              <!-- Product Box  -->
+              <tr>
+                <!-- Product Image Box -->
+                <td class="prodBox">
+                  <img src="/images/5.png" alt="Product Image">
+                </td>
+                <td class="infBox">
+                  <p class="infTitle">Akadia Djath 700gram</p>
+                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                    <div class="infPrice">
+                      <span>1.85</span>
+                      <span>€</span>
+                    </div>
+                    <!-- Quantity Incress and Decress Container-->
+                    <div style="display: flex;align-items: center;">
+                      <button class="quantity-btn lowCon">&#8722;</button>
+                      <input type="number" class="quantity-input" value="1">
+                      <button class="quantity-btn highCon">&#x2b;</button>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <!-- End of Product Box  -->
+  
+                    <!-- Product Box  -->
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <img src="/images/2.jpg" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Fruta te fresketa 1kg</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>6.13</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
             </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/5.png" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p class="infTitle">Akadia Djath 700gram</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div class="infPrice">
-                    <span>1.85</span>
-                    <span>€</span>
+          </td>
+        </tr>
+        <!-- End of Product Box  -->
+  
+              <!-- Product Box  -->
+              <tr>
+                <!-- Product Image Box -->
+                <td class="prodBox">
+                  <img src="/images/4.png" alt="Product Image">
+                </td>
+                <td class="infBox">
+                  <p class="infTitle">Vrishlle Perutina 400gram</p>
+                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                    <div class="infPrice">
+                      <span>2.50</span>
+                      <span>€</span>
+                    </div>
+                    <!-- Quantity Incress and Decress Container-->
+                    <div style="display: flex;align-items: center;">
+                      <button class="quantity-btn lowCon">&#8722;</button>
+                      <input type="number" class="quantity-input" value="1">
+                      <button class="quantity-btn highCon">&#x2b;</button>
+                    </div>
                   </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div style="display: flex;align-items: center;">
-                    <button class="quantity-btn lowCon">&#8722;</button>
-                    <input type="number" class="quantity-input" value="1">
-                    <button class="quantity-btn highCon">&#x2b;</button>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p class="infTitle">Fruta te fresketa 1kg</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div class="infPrice">
-              <span>6.13</span>
-              <span>€</span>
+                </td>
+              </tr>
+              <!-- End of Product Box  -->
+  
+                    <!-- Product Box  -->
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <img src="/images/3.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Makarona Devoli 150gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>100</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
             </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div style="display: flex;align-items: center;">
-              <button class="quantity-btn lowCon">&#8722;</button>
-              <input type="number" class="quantity-input" value="1">
-              <button class="quantity-btn highCon">&#x2b;</button>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/4.png" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p class="infTitle">Vrishlle Perutina 400gram</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div class="infPrice">
-                    <span>2.50</span>
-                    <span>€</span>
+          </td>
+        </tr>
+        <!-- End of Product Box  -->
+  
+              <!-- Product Box  -->
+              <tr>
+                <!-- Product Image Box -->
+                <td class="prodBox">
+                  <img src="/images/2.png" alt="Product Image">
+                </td>
+                <td class="infBox">
+                  <p class="infTitle">Leng Vishnje Frutti 1L  </p>
+                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                    <div class="infPrice">
+                      <span>100</span>
+                      <span>€</span>
+                    </div>
+                    <!-- Quantity Incress and Decress Container-->
+                    <div style="display: flex;align-items: center;">
+                      <button class="quantity-btn lowCon">&#8722;</button>
+                      <input type="number" class="quantity-input" value="1">
+                      <button class="quantity-btn highCon">&#x2b;</button>
+                    </div>
                   </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div style="display: flex;align-items: center;">
-                    <button class="quantity-btn lowCon">&#8722;</button>
-                    <input type="number" class="quantity-input" value="1">
-                    <button class="quantity-btn highCon">&#x2b;</button>
+                </td>
+              </tr>
+              <!-- End of Product Box  -->
+  
+              <!-- Product Box  -->
+              <tr>
+                <!-- Product Image Box -->
+                <td class="prodBox">
+                  <img src="/images/1.png" alt="Product Image">
+                </td>
+                <td class="infBox">
+                  <p class="infTitle">Green Yogurt 200gr</p>
+                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                    <div class="infPrice">
+                      <span>100</span>
+                      <span>€</span>
+                    </div>
+                    <!-- Quantity Incress and Decress Container-->
+                    <div style="display: flex;align-items: center;">
+                      <button class="quantity-btn lowCon">&#8722;</button>
+                      <input type="number" class="quantity-input" value="1">
+                      <button class="quantity-btn highCon">&#x2b;</button>
+                    </div>
                   </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
+                </td>
+              </tr>
+              <!-- End of Product Box  -->
+  
+      </tbody>
 
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/3.png" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p class="infTitle">Makarona Devoli 150gr</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div class="infPrice">
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div style="display: flex;align-items: center;">
-              <button class="quantity-btn lowCon">&#8722;</button>
-              <input type="number" class="quantity-input" value="1">
-              <button class="quantity-btn highCon">&#x2b;</button>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
+    </table>
 
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.png" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div class="infPrice">
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div style="display: flex;align-items: center;">
-                    <button class="quantity-btn lowCon">&#8722;</button>
-                    <input type="number" class="quantity-input" value="1">
-                    <button class="quantity-btn highCon">&#x2b;</button>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
 
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/1.png" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p class="infTitle">Green Yogurt 200gr</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div class="infPrice">
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div style="display: flex;align-items: center;">
-                    <button class="quantity-btn lowCon">&#8722;</button>
-                    <input type="number" class="quantity-input" value="1">
-                    <button class="quantity-btn highCon">&#x2b;</button>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-    </tbody>
-  </table>
-
-  <!-- Cart Footer Sticky -->
-  <footer class="footerSection">
-    <div style="display: flex; flex-direction: column;">
-      <div class="flex-alg-center" style="justify-content: space-between;">
-        <span>Tarifa e transportit:</span>
-        <span>0.00 Euro</span>
-      </div>
-      <div class="flex-alg-center" style="justify-content: space-between;">
-        <span>totali i produkteve:</span>
-        <span>100.00 Euro</span>
+    <!-- 
+    <div class="totalPrice">
+      <div class="flex-just-center cartBtnCont">
+        <button>Share Favorite List</button>
+        <a href="index.html"><button>Continue Shopping</button></a>
       </div>
     </div>
-    <div class="flex-alg-center" style="justify-content: space-between;">
-      <h4>Totali: 100€</h4>
-      <button class="cart-btn">Share List</button>
-    </div>
-  </footer>
+    -->
 
-  <!-- End of Cart Footer Sticky -->
+  </section>
 
 
+
+  
 
 
 
@@ -258,43 +244,6 @@
 
 
 
-
-
-  <!-- Quantity and Add to cart Button Script -->
-  <script>
-    document.querySelectorAll('.cart-btn').forEach(function(btn) {
-      btn.addEventListener('click', function() {
-        const parent = this.closest('.product-card');
-        const addToCartBtn = parent.querySelector('.cart-btn');
-        const quantityControls = parent.querySelector('.quantity-controls');
-
-        addToCartBtn.style.display = 'none';
-        quantityControls.style.display = 'flex';
-      });
-    });
-
-    document.querySelectorAll('.quantity-btn').forEach(function(btn) {
-      btn.addEventListener('click', function() {
-        const parent = this.closest('.product-card');
-        const quantityInput = parent.querySelector('.quantity-input');
-        const addToCartBtn = parent.querySelector('.cart-btn');
-        const quantityControls = parent.querySelector('.quantity-controls');
-
-        if (btn.classList.contains('highCon')) {
-          quantityInput.value = parseInt(quantityInput.value) + 1;
-        } else {
-          if (quantityInput.value > 1) {
-            quantityInput.value = parseInt(quantityInput.value) - 1;
-          } else {
-            addToCartBtn.style.display = 'block';
-            quantityControls.style.display = 'none';
-          }
-        }
-      });
-    });
-  </script>
-
-  <!-- End of  Quantity and Add to cart Button Script -->
 
 
   <script type="module" src="/src/main.js"></script>
